<resources>
    <string name="Backup_Restore">Backup/Restore colour settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="alertDialogNightly_summary">Nightlies will be generated at 11.30 pm CEST</string>
    <string name="android_security_patch">Security patch level</string>
    <string name="android_version">Android version</string>
    <string name="animator_duration_scale_title">Animator Duration scale</string>
    <string name="app_name">RiCE Tweaks</string>
    <string name="app_version">RiCE Tweaks version</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_notification">Apply</string>
    <string name="back">Back</string>
    <string name="banner_home_footer">ca-app-pub-3113797527117263/6183746858</string>
    <string name="battery_bar_animate_style_summary">Disabled</string>
    <string name="battery_bar_animate_style_summaryOn">Enabled</string>
    <string name="battery_bar_animate_style_title">Bar Animation</string>
    <string name="battery_bar_center_style_summary">Disabled</string>
    <string name="battery_bar_center_style_summaryOn">Center-Mirrored</string>
    <string name="battery_bar_center_style_title">Center-Mirrored</string>
    <string name="battery_bar_color_title">Bar Colour</string>
    <string name="battery_bar_summary">Disabled</string>
    <string name="battery_bar_summaryOn">Enabled</string>
    <string name="battery_bar_thickness_title">Bar Thickness</string>
    <string name="battery_bar_title">Battery Bar</string>
    <string name="battery_percentage_flash_summary">Battery level to disable the use of flash in camera</string>
    <string name="battery_percentage_flash_title">Camera flash battery (%) limit</string>
    <string name="biometrics_settings_preferences">Biometrics</string>
    <string name="bixby">Bixby</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="busybox_not">BusyBox not available.</string>
    <string name="busybox_version">BusyBox status</string>
    <string name="camera_preference_title">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="changelog_full_title">App Changelog</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more…</string>
    <string name="changelog_title">"What's New"</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clock_position">Clock Position</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="general">General</string>
    <string name="header_color_preference_title">Header</string>
    <string name="hidden">Hidden</string>
    <string name="immersive_category">Immersive Mods</string>
    <string name="immersive_perapp">Immersive Mode (Per App)</string>
    <string name="immersive_perapp_summary">Select Apps for Auto Immersion</string>
    <string name="immersive_perapp_title">Immersive Mode (Per App)</string>
    <string name="lockscreen_preference_title">Lockscreen</string>
    <string name="misc_preference_title">Misc</string>
    <string name="nav_app">Application</string>
    <string name="nav_buttons">Buttons</string>
    <string name="nav_colors">Colours</string>
    <string name="nav_hbm">High Brightness Mode</string>
    <string name="nav_home">Home</string>
    <string name="nav_misc">Misc</string>
    <string name="nav_op6_remap">Custom Apps Remaps</string>
    <string name="nav_rom_options">ROM Control</string>
    <string name="nav_statusbar">Status Bar</string>
    <string name="nav_system">System</string>
    <string name="nav_system_info">System Info</string>
    <string name="nav_ui">System UI</string>
    <string name="navbar_color_preference_title">Navigation Bar</string>
    <string name="notifications_color_preference_title">Notifications</string>
    <string name="notifications_icons">Notification panel</string>
    <string name="quick_settings_preference_title">Quick Settings</string>
    <string name="settings_license">License</string>
    <string name="statusbar_color_preference_title">Status Bar</string>
    <string name="transition_animation_scale_title">Transition Animation scale</string>
    <string name="tweaks_all_rotations_title">Enable all rotations</string>
    <string name="tweaks_allow_custom_navbar_height_title">Allow Navbar height to be edited</string>
    <string name="tweaks_brightness_slider_summary">Visible</string>
    <string name="tweaks_brightness_slider_summaryOn">Hidden</string>
    <string name="tweaks_brightness_slider_title">Hide QS Brightness slider</string>
    <string name="tweaks_clock_onclick_summary">Launch Clock app when clicking on the clock in the statusbar</string>
    <string name="tweaks_clock_onclick_title">Launch Clock app</string>
    <string name="tweaks_clock_seconds_summary">Show the seconds in statusbar clock</string>
    <string name="tweaks_clock_seconds_title">Display seconds in clock</string>
    <string name="tweaks_disable_brightness_warning_title">High Brightness warning</string>
    <string name="tweaks_disable_system_notifications">Make System Notifications removable</string>
    <string name="tweaks_disable_volume_warning_title">Loud Volume warning</string>
    <string name="tweaks_double_tap_sleep_summary">Double Tap status bar to put device to sleep</string>
    <string name="tweaks_double_tap_sleep_title">Double Tap to sleep</string>
    <string name="tweaks_fingerprint_unlock_summary">Do not allow unlock by Fingerprint/Iris after reboot</string>
    <string name="tweaks_fingerprint_unlock_summaryOn">Allow unlock by Fingerprint/Iris after reboot</string>
    <string name="tweaks_fingerprint_unlock_title">Fingerprint/Iris unlock</string>
    <string name="tweaks_hide_battery_title">Hide Battery Icon</string>
    <string name="tweaks_hide_iris_summary">Hide iris preview on lockscreen</string>
    <string name="tweaks_hide_iris_title">Hide iris preview</string>
    <string name="tweaks_hide_keyboard_switcher_title">Hide Keyboard Selection notification</string>
    <string name="tweaks_hide_lockscreen_clock_title">Hide lockscreen clock</string>
    <string name="tweaks_hide_lockscreen_clockdate_title">Hide lockscreen clock and date</string>
    <string name="tweaks_hide_notification_carrier">Hide notification panel carrier label</string>
    <string name="tweaks_immersive_title">Immersive Mode</string>
    <string name="tweaks_lockscreen_guide_text_summaryOn">Help text on lock screen is hidden</string>
    <string name="tweaks_lockscreen_guide_text_title">Hide Lock Screen help text</string>
    <string name="tweaks_lockscreen_rotation_title">Lock Screen rotation</string>
    <string name="tweaks_mtp_notif_summary">Disable MTP pop-up when connected to pc</string>
    <string name="tweaks_mtp_notif_title">Disable MTP pop-up</string>
    <string name="tweaks_navbar_height_title">Navigation Bar height (Potrait rotation only)</string>
    <string name="tweaks_netflix_title">Netflix workaround</string>
    <string name="tweaks_qs_columns_landscape_title">QS Column count in landscape</string>
    <string name="tweaks_qs_columns_title">QS Column count</string>
    <string name="tweaks_qs_flashlight_battery_summary">Allow use of flashlight toggle whilst low battery</string>
    <string name="tweaks_qs_flashlight_battery_title">Flashlight battery level</string>
    <string name="tweaks_qs_lock_summary">Lock the quick settings from being pulled down on the lockscreen</string>
    <string name="tweaks_qs_lock_title">Lock Quick Settings pulldown</string>
    <string name="tweaks_qs_override_lockscreen_summary">Allow use of restricted toggles while phone is locked</string>
    <string name="tweaks_qs_override_lockscreen_title">Enable QS on secured lock screen</string>
    <string name="tweaks_qs_pulldown_blur_summary">Add a blur effect to the background of the QS</string>
    <string name="tweaks_qs_pulldown_blur_title">Pulldown Background blur</string>
    <string name="tweaks_qs_pulldown_summary">Pulling the status bar down from the right will open straight to the tiles</string>
    <string name="tweaks_qs_pulldown_title">Quick pull down</string>
    <string name="tweaks_qs_rows_landscape_title">QS Row count in lanscape</string>
    <string name="tweaks_qs_rows_title">QS Row count</string>
    <string name="tweaks_qs_vibration_summary">Enable vibration when clicking toggles</string>
    <string name="tweaks_qs_vibration_title">QS Vibration</string>
    <string name="tweaks_quick_qs_buttons_landscape_title">Compact QS Tiles in landscape</string>
    <string name="tweaks_quick_qs_buttons_title">Compact QS Tiles</string>
    <string name="tweaks_quick_unlock_summary">Unlock the device without pressing the ok button</string>
    <string name="tweaks_quick_unlock_title">Quick Unlock</string>
    <string name="tweaks_scramble_pin_summary">This only work if stock samsung theme is applied (colour tweaks work fine)</string>
    <string name="tweaks_scramble_pin_summary_op">Randomize the order of the numbers on the keypad</string>
    <string name="tweaks_scramble_pin_title">Randomize pin keypad</string>
    <string name="tweaks_secure_window_summary">Screenshots allowed from inside secure apps</string>
    <string name="tweaks_secure_window_summaryOn">Screenshots blocked from inside secure apps</string>
    <string name="tweaks_secure_window_title">Secure screenshots</string>
    <string name="tweaks_show_multi_user_title">Multi User avatar</string>
    <string name="tweaks_show_navbar_title">Enable Navigation Bar</string>
    <string name="visible">Visible</string>
    <string name="window_animation">System Animations</string>
    <string name="window_animation_scale_title">Window Animation scale</string>
</resources>