<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/immersive_category" android:key="statusbar_title" />
    <ListPreference android:icon="@drawable/ic_immersive_mode" android:entries="@array/tweaks_immersive_entries" android:title="@string/tweaks_immersive_title" android:key="tweaks_immersive_list" android:summary="%s" android:entryValues="@array/tweaks_immersive_values" />
    <MultiSelectListPreference android:icon="@drawable/ic_immersive_mode" android:entries="@array/immersive_perapp_entries" android:title="@string/immersive_perapp_title" android:key="immersive_perapp" android:summary="@string/immersive_perapp_summary" android:dialogTitle="@string/immersive_perapp" android:entryValues="@array/immersive_perapp_values" />
    <PreferenceCategory android:title="@string/nav_statusbar" android:key="statusbar_title" />
    <ListPreference android:icon="@drawable/ic_clock_position" android:entries="@array/tweaks_clock_position_entries" android:title="@string/clock_position" android:key="tweaks_clock_position" android:summary="%s" android:defaultValue="0" android:entryValues="@array/tweaks_clock_position_values" />
    <SwitchPreference android:icon="@drawable/ic_clock" android:title="@string/tweaks_clock_onclick_title" android:key="tweaks_clock_onclick" android:summary="@string/disabled" android:defaultValue="false" android:summaryOn="@string/tweaks_clock_onclick_summary" />
    <SwitchPreference android:icon="@drawable/ic_battery" android:title="@string/tweaks_hide_battery_title" android:key="tweaks_hide_battery" android:summary="@string/disabled" android:defaultValue="false" android:summaryOn="@string/enabled" />
    <SwitchPreference android:icon="@drawable/ic_dt2s" android:title="@string/tweaks_double_tap_sleep_title" android:key="tweaks_double_tap_sleep" android:summary="@string/tweaks_double_tap_sleep_summary" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/ic_multi_user" android:title="@string/tweaks_show_multi_user_title" android:key="tweaks_show_multi_user" android:summary="@string/disabled" android:defaultValue="false" android:summaryOn="@string/enabled" />
    <SwitchPreference android:icon="@drawable/ic_battery_bar" android:title="@string/battery_bar_title" android:key="battery_bar" android:summary="@string/battery_bar_summary" android:defaultValue="false" android:summaryOn="@string/battery_bar_summaryOn" />
    <SwitchPreference android:icon="@drawable/ic_battery_bar1" android:title="@string/battery_bar_animate_style_title" android:key="battery_bar_animate" android:dependency="battery_bar" android:defaultValue="true" android:summaryOn="@string/battery_bar_animate_style_summaryOn" android:summaryOff="@string/battery_bar_animate_style_summary" />
    <SwitchPreference android:icon="@drawable/ic_battery_bar2" android:title="@string/battery_bar_center_style_title" android:key="battery_bar_style" android:summary="@string/battery_bar_center_style_summary" android:dependency="battery_bar" android:defaultValue="false" android:summaryOn="@string/battery_bar_center_style_summaryOn" />
    <com.ice.box.customcolorpicker.ColorPreference android:icon="@drawable/ic_battery_bar3" android:title="@string/battery_bar_color_title" android:key="battery_bar_color" android:dependency="battery_bar" android:defaultValue="-13388315" app:cpv_showAlphaSlider="true" app:cpv_showColorShades="true" />
    <ListPreference android:icon="@drawable/ic_battery_bar4" android:entries="@array/battery_bar_thickness_entries" android:title="@string/battery_bar_thickness_title" android:key="battery_bar_thickness" android:summary="%s" android:dependency="battery_bar" android:defaultValue="2" android:entryValues="@array/battery_bar_thickness_values" />
    <PreferenceCategory android:title="@string/quick_settings_preference_title" android:key="qs_title" />
    <ListPreference android:icon="@drawable/ic_compact_tiles" android:entries="@array/quick_qs_button_entries" android:title="@string/tweaks_quick_qs_buttons_title" android:key="tweaks_quick_qs_buttons" android:summary="%s" android:defaultValue="6" android:entryValues="@array/quick_qs_button_values" />
    <ListPreference android:icon="@drawable/ic_compact_tiles" android:entries="@array/quick_qs_button_landscape_entries" android:title="@string/tweaks_quick_qs_buttons_landscape_title" android:key="tweaks_quick_qs_buttons_landscape" android:summary="%s" android:defaultValue="10" android:entryValues="@array/quick_qs_button_landscape_values" />
    <ListPreference android:icon="@drawable/ic_column" android:entries="@array/qs_tile_row_entries" android:title="@string/tweaks_qs_rows_title" android:key="tweaks_qs_rows" android:summary="%s" android:defaultValue="3" android:entryValues="@array/qs_tile_row_values" />
    <ListPreference android:icon="@drawable/ic_column" android:entries="@array/qs_tile_row_landscape_entries" android:title="@string/tweaks_qs_rows_landscape_title" android:key="tweaks_qs_rows_landscape" android:summary="%s" android:defaultValue="2" android:entryValues="@array/qs_tile_row_landscape_values" />
    <ListPreference android:icon="@drawable/ic_row" android:entries="@array/qs_tile_column_entries" android:title="@string/tweaks_qs_columns_title" android:key="tweaks_qs_columns" android:summary="%s" android:defaultValue="4" android:entryValues="@array/qs_tile_column_values" />
    <ListPreference android:icon="@drawable/ic_row" android:entries="@array/qs_tile_column_landscape_entries" android:title="@string/tweaks_qs_columns_landscape_title" android:key="tweaks_qs_columns_landscape" android:summary="%s" android:defaultValue="6" android:entryValues="@array/qs_tile_column_landscape_values" />
    <SwitchPreference android:icon="@drawable/ic_brightness" android:title="@string/tweaks_brightness_slider_title" android:key="tweaks_hide_brightness_slider" android:summary="@string/tweaks_brightness_slider_summary" android:defaultValue="false" android:summaryOn="@string/tweaks_brightness_slider_summaryOn" />
    <SwitchPreference android:icon="@drawable/ic_lock" android:title="@string/tweaks_qs_lock_title" android:key="tweaks_qs_lock" android:summary="@string/tweaks_qs_lock_summary" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/ic_lock" android:title="@string/tweaks_qs_override_lockscreen_title" android:key="tweaks_qs_override_lockscreen" android:summary="@string/tweaks_qs_override_lockscreen_summary" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/ic_pull" android:title="@string/tweaks_qs_pulldown_title" android:key="tweaks_qs_pulldown" android:summary="@string/disabled" android:defaultValue="true" android:summaryOn="@string/tweaks_qs_pulldown_summary" />
    <SwitchPreference android:icon="@drawable/ic_blur" android:title="@string/tweaks_qs_pulldown_blur_title" android:key="tweaks_pulldown_blur" android:summary="@string/tweaks_qs_pulldown_blur_summary" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/ic_battery" android:title="@string/tweaks_qs_flashlight_battery_title" android:key="tweaks_flashlight_low_battery" android:summary="@string/tweaks_qs_flashlight_battery_summary" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/notifications_icons" android:key="notifications_title" />
    <SwitchPreference android:icon="@drawable/ic_notification" android:title="@string/tweaks_disable_system_notifications" android:key="tweaks_disable_persistent_notifications" android:summary="@string/disabled" android:defaultValue="false" android:summaryOn="@string/enabled" />
    <SwitchPreference android:icon="@drawable/ic_notification" android:title="@string/tweaks_hide_notification_carrier" android:key="tweaks_hide_notification_carrier" android:summary="@string/visible" android:defaultValue="false" android:summaryOn="@string/hidden" />
    <SwitchPreference android:icon="@drawable/ic_keyboard" android:title="@string/tweaks_hide_keyboard_switcher_title" android:key="tweaks_hide_keyboard_switcher" android:summary="@string/visible" android:defaultValue="false" android:summaryOn="@string/hidden" />
    <PreferenceCategory android:title="@string/navbar_color_preference_title" android:key="navbar_title" />
    <SwitchPreference android:title="@string/tweaks_show_navbar_title" android:key="tweaks_show_navbar" android:defaultValue="false" />
    <SwitchPreference android:icon="@drawable/ic_navbarheight" android:title="@string/tweaks_allow_custom_navbar_height_title" android:key="tweaks_custom_navbar_height" android:defaultValue="false" />
    <Preference android:icon="@drawable/ic_navbarheight" android:title="@string/tweaks_navbar_height_title" android:key="tweaks_navbar_height" android:defaultValue="128" />
    <PreferenceCategory android:title="@string/general" android:key="general_title" />
    <SwitchPreference android:icon="@drawable/ic_rotate" android:title="@string/tweaks_all_rotations_title" android:key="tweaks_all_rotations" android:summary="@string/disabled" android:defaultValue="false" android:summaryOn="@string/enabled" />
    <SwitchPreference android:icon="@drawable/ic_loud_volume" android:title="@string/tweaks_disable_volume_warning_title" android:key="tweaks_disable_volume_warning" android:summary="@string/hidden" android:defaultValue="true" android:summaryOn="@string/visible" />
    <SwitchPreference android:icon="@drawable/ic_brightness" android:title="@string/tweaks_disable_brightness_warning_title" android:key="tweaks_hide_brightness_warning" android:summary="@string/hidden" android:defaultValue="true" android:summaryOn="@string/visible" />
    <SwitchPreference android:icon="@drawable/ic_mtp" android:title="@string/tweaks_mtp_notif_title" android:key="tweaks_disable_mtp_notif" android:summary="@string/tweaks_mtp_notif_summary" android:defaultValue="false" />
    <PreferenceCategory android:title="@string/window_animation" />
    <ListPreference android:icon="@drawable/ic_window_anim" android:entries="@array/window_animation_scale_entries" android:title="@string/window_animation_scale_title" android:key="window_animation_scale" android:summary="%s" android:defaultValue="1" android:entryValues="@array/window_animation_scale_values" />
    <ListPreference android:icon="@drawable/ic_transition" android:entries="@array/transition_animation_scale_entries" android:title="@string/transition_animation_scale_title" android:key="transition_animation_scale" android:summary="%s" android:defaultValue="1" android:entryValues="@array/transition_animation_scale_values" />
    <ListPreference android:icon="@drawable/ic_animator" android:entries="@array/animator_duration_scale_entries" android:title="@string/animator_duration_scale_title" android:key="animator_duration_scale" android:summary="%s" android:defaultValue="1" android:entryValues="@array/animator_duration_scale_values" />
</PreferenceScreen>